--- a/index.html
+++ b/index.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Harish Mukkara</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-    welcome
+    <div class="hero">
+        <div class="center">
+            <h1>Harish Mukkara</h1>
+            <h4>Full stack Developer, Avid reader.</h4>
+            <div class="social">
+                <div class="git"><a href="https://github.com/hy505" target="_blank">/github</a></div>
+                <div class="tw"><a href="https://twitter.com/HariMukkara" target="_blank">/twitter</a></div>
+                <div class="fb"><a href="https://www.facebook.com/mukkara.harish.1" target="_blank">/facebook</a></div>
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
