added image and made some changes to appearance

--- a/index.html
+++ b/index.html
@@ -7,10 +7,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Harish Mukkara</title>
     <link rel="stylesheet" href="css/style.css">
+    <!-- <link rel="stylesheet" href="css/debug.css"> -->
 </head>
 
 <body>
     <div class="hero">
+        <div class="proimage">
+            <img src="assets/harish_mukkara.jpg" width="150px" height="150px" alt="harish_mukkara profile image. harishmukkara.ml">
+        </div>
         <div class="center">
             <h1>Harish Mukkara</h1>
             <h4>Full stack Developer, Avid reader.</h4>
