--- a/index.html
+++ b/index.html
@@ -7,23 +7,211 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Harish Mukkara</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+        integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     <!-- <link rel="stylesheet" href="css/debug.css"> -->
 </head>
 
 <body>
     <div class="hero">
         <div class="proimage">
-            <img src="assets/harish_mukkara.jpg" width="150px" height="150px" alt="harish_mukkara profile image. harishmukkara.ml">
+            <img src="assets/harish_mukkara.jpg" width="150px" height="150px"
+                alt="harish_mukkara profile image. harishmukkara.ml">
         </div>
+
         <div class="center">
             <h1>Harish Mukkara</h1>
-            <h4>Full stack Developer, Avid reader.</h4>
-            <div class="social">
-                <div class="git"><a href="https://github.com/hy505" target="_blank">/github</a></div>
-                <div class="tw"><a href="https://twitter.com/HariMukkara" target="_blank">/twitter</a></div>
-                <div class="fb"><a href="https://www.facebook.com/mukkara.harish.1" target="_blank">/facebook</a></div>
+            <h4>Full stack Developer, Final year student at JNTUACEP.</h4>
+        </div>
+        <!-- social card -->
+        <div class="card">
+            <span class="card-title">Social</span>
+
+            <!-- tiwtter  -->
+            <div class="card-item">
+
+                <div class="item-icon twitter">
+                    <i class="fab fa-twitter-square fa-2x"></i>
+                </div>
+
+                <div class="item-body">
+                    <div class="item-head">
+                        <a href="https://twitter.com/HariMukkara"> Twitter </a>
+                    </div>
+
+                    <!-- <div class="item-description">
+                        item item-description of the head
+                    </div> -->
+                </div>
+            </div>
+
+            <!-- facebook  -->
+            <div class="card-item">
+
+                <div class="item-icon facebook">
+                    <i class="fab fa-facebook-square fa-2x"></i>
+                </div>
+
+                <div class="item-body">
+                    <div class="item-head">
+                        <a href="https://www.facebook.com/mukkara.harish.1"> Facebook </a>
+                    </div>
+
+                    <!-- <div class="item-description">
+                        item item-description of the head
+                    </div> -->
+                </div>
+            </div>
+
+            <!-- Github  -->
+            <div class="card-item">
+
+                <div class="item-icon twitter">
+                    <i class="fab fa-github-square fa-2x"></i>
+                </div>
+
+                <div class="item-body">
+                    <div class="item-head">
+                        <a href="https://github.com/hy505"> Github </a>
+                    </div>
+
+                    <!-- <div class="item-description">
+                        item item-description of the head
+                    </div> -->
+                </div>
             </div>
         </div>
+
+        <!-- skill card -->
+        <div class="card">
+            <span class="card-title">
+                skills
+            </span>
+
+            <!-- php  -->
+            <div class="card-item">
+
+                <div class="item-icon php">
+                    <i class="fab fa-php fa-2x"></i>
+                </div>
+                <div class="item-body">
+                    <div class="item-head">
+                        <a href="https://github.com/hy505?utf8=%E2%9C%93&tab=repositories&q=&type=&language=php"> Php
+                        </a>
+                    </div>
+
+                    <div class="item-description">
+                        Since 11/11/2018. Currently playing with Codeigniter.
+                    </div>
+                </div>
+            </div>
+
+            <!-- python  -->
+            <div class="card-item">
+
+                <div class="item-icon python">
+                    <i class="fab fa-python fa-2x"></i>
+                </div>
+                <div class="item-body">
+                    <div class="item-head">
+                        <a href="https://github.com/hy505?utf8=%E2%9C%93&tab=repositories&q=&type=&language=python">
+                            Python
+                        </a>
+                    </div>
+
+                    <div class="item-description">
+                        Using since 01/06/2017. Mostly for automation of my tasks and web scraping.
+                    </div>
+                </div>
+            </div>
+
+            <!-- javascript  -->
+            <div class="card-item">
+
+                <div class="item-icon javascript">
+                    <i class="fab fa-js-square fa-2x"></i>
+                </div>
+                <div class="item-body">
+                    <div class="item-head">
+                        <a href="https://github.com/hy505?utf8=✓&tab=repositories&q=&type=&language=javscript">
+                            JavaScript
+                        </a>
+                    </div>
+
+                    <div class="item-description">
+                        Trying to become an expert. Knows jQuery.
+                    </div>
+                </div>
+            </div>
+
+            <!-- css  -->
+            <div class="card-item">
+
+                <div class="item-icon css">
+                    <i class="fab fa-css3-alt fa-2x"></i>
+                </div>
+                <div class="item-body">
+                    <div class="item-head">
+                        <a href="https://github.com/hy505?utf8=✓&tab=repositories&q=&type=&language=css">
+                            CSS
+                        </a>
+                    </div>
+
+                    <div class="item-description">
+                        Bootstrap, bulma.
+                    </div>
+                </div>
+            </div>
+
+            <!-- html  -->
+            <div class="card-item">
+
+                <div class="item-icon html">
+                    <i class="fab fa-html5 fa-2x"></i>
+                </div>
+                <div class="item-body">
+                    <div class="item-head">
+                        <a href="https://github.com/hy505?utf8=✓&tab=repositories&q=&type=&language=html">
+                            HTML
+                        </a>
+                    </div>
+
+                    <div class="item-description">
+                        know it well. Have experience with XML too.
+                    </div>
+                </div>
+            </div>
+
+
+        </div>
+
+        <!-- projects card -->
+        <div class="card">
+            <span class="card-title">
+                Projects
+            </span>
+
+            <!-- pubgwarfield  -->
+            <div class="card-item">
+
+                <div class="item-icon">
+                    <i class="fas fa-gamepad fa-2x"></i>
+                </div>
+                <div class="item-body">
+                    <div class="item-head">
+                        <a href="https://pubgwarfield.in"> Pubg Warfield
+                        </a>
+                    </div>
+
+                    <div class="item-description">
+                        An online platform for pubg players to play and earn by playing.
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+    </div>
     </div>
 </body>
 
