--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                     </div>
 
                     <div class="item-description">
-                        An online platform for pubg players to play and earn by playing.
+                        An online platform for pubg players to earn money by playing.
                     </div>
                 </div>
             </div>
