added new skills and rplaced fb with linkedin

--- a/index.html
+++ b/index.html
@@ -45,16 +45,16 @@
                 </div>
             </div>
 
-            <!-- facebook  -->
+            <!-- linkedin  -->
             <div class="card-item">
 
                 <div class="item-icon facebook">
-                    <i class="fab fa-facebook-square fa-2x"></i>
+                    <i class="fab fa-linkedin fa-2x"></i>
                 </div>
 
                 <div class="item-body">
                     <div class="item-head">
-                        <a href="https://www.facebook.com/mukkara.harish.1"> Facebook </a>
+                        <a href="https://www.linkedin.com/in/harishmukkara/"> LinkedIn </a>
                     </div>
 
                     <!-- <div class="item-description">
@@ -120,7 +120,7 @@
                     </div>
 
                     <div class="item-description">
-                        Using since 01/06/2017. Mostly for automation of my tasks and web scraping.
+                        Since 01/06/2017. Mostly for automation of my tasks and web scraping.
                     </div>
                 </div>
             </div>
@@ -139,7 +139,7 @@
                     </div>
 
                     <div class="item-description">
-                        Trying to become an expert. Knows jQuery.
+                        Trying to become an expert. worked with jQuery, Now Vue.js
                     </div>
                 </div>
             </div>
@@ -158,7 +158,7 @@
                     </div>
 
                     <div class="item-description">
-                        Bootstrap, bulma.
+                        Bootstrap, Bulma. now Tailwindcss
                     </div>
                 </div>
             </div>
@@ -177,7 +177,7 @@
                     </div>
 
                     <div class="item-description">
-                        know it well. Have experience with XML too.
+                        Kidding me? are you?
                     </div>
                 </div>
             </div>
@@ -209,6 +209,40 @@
                 </div>
             </div>
 
+            <div class="card-item">
+
+                <div class="item-icon python">
+                    <i class="fab fa-python fa-2x"></i>
+                </div>
+                <div class="item-body">
+                    <div class="item-head">
+                        <a href="https://www.quora.com/q/vyhvwvrsmrmmhnyb"> Quora TOP Writers
+                        </a>
+                    </div>
+
+                    <div class="item-description">
+                        This is awesome. I make this TOP writers by scrapping thousands of pages from Quora.
+                        I use IP proxy servers too (luminati.io), for this work.
+                    </div>
+                </div>
+            </div>
+            <div class="card-item">
+
+                <div class="item-icon javascript">
+                    <i class="fas fa-university fa-2x"></i>
+                </div>
+                <div class="item-body">
+                    <div class="item-head">
+                        <a href="https://www.quora.com/q/vyhvwvrsmrmmhnyb"> JNTUACEP website
+                        </a>
+                    </div>
+
+                    <div class="item-description">
+                        I along with my other <a href="https://github.com/praneeth14">mate</a>, design,develp and
+                        maintain our college website.
+                    </div>
+                </div>
+            </div>
         </div>
 
     </div>
