--- a/index.html
+++ b/index.html
@@ -246,6 +246,8 @@
         </div>
 
     </div>
+    <div style="text-align:center;color:#aaa;font-size: .75rem;text-transform: uppercase;">
+        <p>Site Last updated: 14-08-2019</p>
     </div>
 </body>
 
