--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                 </div>
                 <div class="item-body">
                     <div class="item-head">
-                        <a href="https://www.quora.com/q/vyhvwvrsmrmmhnyb"> JNTUACEP website
+                        <a href="https://jntuacep.ac.in"> JNTUACEP website
                         </a>
                     </div>
 
