--- a/customCheckBox.html
+++ b/customCheckBox.html
@@ -80,6 +80,10 @@
         }
 
         #submit {
+            position: absolute;
+            bottom: 1px;
+            width: 80%;
+            background-color: transparent;
             padding: 5px;
             border-radius: 0.3em;
             border-color: #2196F3;
