--- a/customCheckBox.html
+++ b/customCheckBox.html
@@ -8,7 +8,7 @@
 
     <style>
         * {
-            font-size: 22px;
+            font-size: 1rem;
         }
 
         /* The container */
@@ -81,7 +81,7 @@
 
         #submit {
             position: absolute;
-            bottom: 1px;
+            bottom: 0;
             width: 80%;
             background-color: transparent;
             padding: 5px;
