--- a/customCheckBox.html
+++ b/customCheckBox.html
@@ -15,10 +15,9 @@
         .container {
             display: block;
             position: relative;
-            padding-left: 35px;
+            padding-left: 25px;
             margin-bottom: 12px;
             cursor: pointer;
-            /* font-size: 22px; */
             -webkit-user-select: none;
             -moz-user-select: none;
             -ms-user-select: none;
@@ -39,9 +38,10 @@
             position: absolute;
             top: 0;
             left: 0;
-            height: 15px;
-            width: 15px;
+            height: 17px;
+            width: 17px;
             background-color: #eee;
+            border: 1px solid #2196F3;
         }
 
         /* On mouse-over, add a grey background color */
@@ -68,10 +68,10 @@
 
         /* Style the checkmark/indicator */
         .container .checkmark:after {
-            left: 9px;
-            top: 5px;
-            width: 5px;
-            height: 10px;
+            left: 6px;
+            top: 3px;
+            width: 3px;
+            height: 7px;
             border: solid white;
             border-width: 0 3px 3px 0;
             -webkit-transform: rotate(45deg);
