--- a/customCheckBox.html
+++ b/customCheckBox.html
@@ -8,7 +8,7 @@
 
     <style>
         * {
-            font-size: 1rem;
+            /* font-size: 1rem; */
         }
 
         /* The container */
