--- a/customCheckBox.html
+++ b/customCheckBox.html
@@ -9,6 +9,7 @@
     <style>
         * {
             font-family: "botplatform-font", "Helvetica Neue", Helvetica, Arial, sans-serif;
+            font-weight: 300;
         }
 
         /* The container */
@@ -18,6 +19,7 @@
             padding-left: 25px;
             margin-bottom: 12px;
             cursor: pointer;
+            color: rgb(38, 50, 56);
             -webkit-user-select: none;
             -moz-user-select: none;
             -ms-user-select: none;
