--- a/customCheckBox.html
+++ b/customCheckBox.html
@@ -19,6 +19,7 @@
             padding-left: 25px;
             margin-bottom: 12px;
             cursor: pointer;
+            font-size: 14px;
             color: rgb(38, 50, 56);
             -webkit-user-select: none;
             -moz-user-select: none;
