--- a/customCheckBox.html
+++ b/customCheckBox.html
@@ -115,6 +115,54 @@
             <input type="checkbox" value="some4">
             <span class="checkmark"></span>
         </label>
+        <label class="container">One
+            <input type="checkbox" value="some">
+            <span class="checkmark"></span>
+        </label>
+        <label class="container">Two
+            <input type="checkbox" value="some2">
+            <span class="checkmark"></span>
+        </label>
+        <label class="container">Three
+            <input type="checkbox" value="some3">
+            <span class="checkmark"></span>
+        </label>
+        <label class="container">Four
+            <input type="checkbox" value="some4">
+            <span class="checkmark"></span>
+        </label>
+        <label class="container">One
+            <input type="checkbox" value="some">
+            <span class="checkmark"></span>
+        </label>
+        <label class="container">Two
+            <input type="checkbox" value="some2">
+            <span class="checkmark"></span>
+        </label>
+        <label class="container">Three
+            <input type="checkbox" value="some3">
+            <span class="checkmark"></span>
+        </label>
+        <label class="container">Four
+            <input type="checkbox" value="some4">
+            <span class="checkmark"></span>
+        </label>
+        <label class="container">One
+            <input type="checkbox" value="some">
+            <span class="checkmark"></span>
+        </label>
+        <label class="container">Two
+            <input type="checkbox" value="some2">
+            <span class="checkmark"></span>
+        </label>
+        <label class="container">Three
+            <input type="checkbox" value="some3">
+            <span class="checkmark"></span>
+        </label>
+        <label class="container">Four
+            <input type="checkbox" value="some4">
+            <span class="checkmark"></span>
+        </label>
     </div>
     <button id="submit">
         submit
