--- a/customCheckBox.html
+++ b/customCheckBox.html
@@ -44,7 +44,7 @@
             height: 15px;
             width: 15px;
             background-color: #eee;
-            border: 1px solid #2196F3;
+            border: 1px solid #1C4191;
         }
 
         /* On mouse-over, add a grey background color */
@@ -54,7 +54,7 @@
 
         /* When the checkbox is checked, add a blue background */
         .container input:checked~.checkmark {
-            background-color: #2196F3;
+            background-color: #1C4191;
         }
 
         /* Create the checkmark/indicator (hidden when not checked) */
@@ -89,8 +89,8 @@
             background-color: transparent;
             padding: 5px;
             border-radius: 0.3em;
-            border-color: #2196F3;
-            color: #2196F3;
+            border-color: #1C4191;
+            color: #1C4191;
             position: relative;
             overflow: hidden;
         }
