--- a/customCheckBox.html
+++ b/customCheckBox.html
@@ -192,13 +192,13 @@
                         event: {
                             code: "Date",
                             data: {
-                                selectedDate: date
+                                payload
                             }
                         }
                     })
                 }));
-                });
             });
+        });
     </script>
 </body>
 
