--- a/customCheckBox.html
+++ b/customCheckBox.html
@@ -109,13 +109,14 @@
         $(document).ready(function () {
             //on load
             let params = [...new URLSearchParams(window.location.search).entries()];
+
             let options = $('#options');
 
             params.forEach(param => {
 
             })
             // console.log(params)
-
+            options.append($('<p></p').text(JSON.stringify(params)));
             params.forEach(param => {
                 options.append($(`<label class="container">${param[0]}<input type="checkbox" value="${param[1]}"><span class="checkmark"></span></label>`));
             })
