--- a/customCheckBox.html
+++ b/customCheckBox.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <head>
     <script crossorigin=anonymous integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
         src=https://code.jquery.com/jquery-3.4.1.min.js> </script> <style>
@@ -73,9 +74,10 @@
     #submit {
         position: absolute;
         bottom: 0;
-        width: 80%;
+        /* width: 80%; */
         background-color: transparent;
-        padding: 5px;
+        padding:15px 5px;
+        /* margin: 10px 5px; */
         border-radius: .3em;
         border-color: #1c4191;
         background-color: #1c4191;
@@ -114,4 +116,4 @@
     });
 </script>
 
-</html>
+    </html>
