--- a/customCheckBox.html
+++ b/customCheckBox.html
@@ -119,7 +119,7 @@
 
             let options = $('#options');
 
-            params = params.filter(param => params[0] !== 'frameId');
+            params = params.filter(param => param[0] != 'frameId');
             // console.log(params)
             params.forEach(param => {
                 options.append($(`<label class="container">${param[0]}<input type="checkbox" value="${param[1]}"><span class="checkmark"></span></label>`));
