--- a/customCheckBox.html
+++ b/customCheckBox.html
@@ -1,157 +1,1 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
-        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous">
-        </script>
-
-    <style>
-        * {
-            font-family: "botplatform-font", "Helvetica Neue", Helvetica, Arial, sans-serif;
-            font-weight: 400;
-        }
-
-        /* The container */
-        .container {
-            display: block;
-            position: relative;
-            padding-left: 25px;
-            margin-bottom: 12px;
-            cursor: pointer;
-            font-size: 14px;
-            color: rgb(38, 50, 56);
-            -webkit-user-select: none;
-            -moz-user-select: none;
-            -ms-user-select: none;
-            user-select: none;
-        }
-
-        /* Hide the browser's default checkbox */
-        .container input {
-            position: absolute;
-            opacity: 0;
-            cursor: pointer;
-            height: 0;
-            width: 0;
-        }
-
-        /* Create a custom checkbox */
-        .checkmark {
-            position: absolute;
-            top: 0;
-            left: 0;
-            height: 15px;
-            width: 15px;
-            background-color: #eee;
-            border: 1px solid #1C4191;
-        }
-
-        /* On mouse-over, add a grey background color */
-        .container:hover input~.checkmark {
-            background-color: #ccc;
-        }
-
-        /* When the checkbox is checked, add a blue background */
-        .container input:checked~.checkmark {
-            background-color: #1C4191;
-        }
-
-        /* Create the checkmark/indicator (hidden when not checked) */
-        .checkmark:after {
-            content: "";
-            position: absolute;
-            display: none;
-        }
-
-        /* Show the checkmark when checked */
-        .container input:checked~.checkmark:after {
-            display: block;
-        }
-
-        /* Style the checkmark/indicator */
-        .container .checkmark:after {
-            left: 4px;
-            top: 2px;
-            width: 3px;
-            height: 6px;
-            border: solid white;
-            border-width: 0 3px 3px 0;
-            -webkit-transform: rotate(45deg);
-            -ms-transform: rotate(45deg);
-            transform: rotate(45deg);
-        }
-
-        #submit {
-            position: absolute;
-            bottom: 0;
-            width: 80%;
-            background-color: transparent;
-            padding: 5px 15px;
-            border-radius: 0.3em;
-            border-color: #1C4191;
-            background-color: #1C4191;
-            color: white;
-            position: relative;
-            overflow: hidden;
-            transition-duration: 500ms;
-            transition-property: background-color, color;
-        }
-
-        #submit:disabled {
-            background-color: gray;
-            color: #ccc;
-        }
-    </style>
-</head>
-
-<body>
-    <div id="options">
-    </div>
-    <button id="submit">
-        submit
-    </button>
-
-    <script>
-        $(document).ready(function () {
-            //on load
-            let params = [...new URLSearchParams(window.location.search).entries()];
-
-            let options = $('#options');
-
-            params = params.filter(param => param[0] != 'frameId');
-            // console.log(params)
-            params.forEach(param => {
-                options.append($(`<label class="container">${param[0]}<input type="checkbox" value="${param[1]}"><span class="checkmark"></span></label>`));
-            })
-
-            //on submit
-            $("#submit").click(function (e) {
-                let payload = [];
-                console.log('button clicked');
-
-                options.children('label').each(function (index) {
-                    let label = $(this);
-                    let checkBox = label.children('input').eq(0);
-                    if (checkBox.prop("checked") == true) {
-                        payload.push(checkBox.val());
-                    }
-                    // console.log();
-                });
-                window.parent.postMessage(JSON.stringify({
-                    event_code: 'ym-client-event', data: JSON.stringify({
-                        event: {
-                            code: "issues",
-                            data: {
-                                payload
-                            }
-                        }
-                    })
-                }), '*');
-                $('#submit').attr('disabled', 'disabled');
-            });
-        });
-    </script>
-</body>
-
-</html>
+<!doctypehtml><script crossorigin=anonymous integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="src=https://code.jquery.com/jquery-3.4.1.min.js></script><style>*{font-family:botplatform-font,"Helvetica Neue",Helvetica,Arial,sans-serif;font-weight:400}.container{display:block;position:relative;padding-left:25px;margin-bottom:12px;cursor:pointer;font-size:14px;color:#263238;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none}.container input{position:absolute;opacity:0;cursor:pointer;height:0;width:0}.checkmark{position:absolute;top:0;left:0;height:15px;width:15px;background-color:#eee;border:1px solid #1c4191}.container:hover input~.checkmark{background-color:#ccc}.container input:checked~.checkmark{background-color:#1c4191}.checkmark:after{content:"";position:absolute;display:none}.container input:checked~.checkmark:after{display:block}.container .checkmark:after{left:4px;top:2px;width:3px;height:6px;border:solid #fff;border-width:0 3px 3px 0;-webkit-transform:rotate(45deg);-ms-transform:rotate(45deg);transform:rotate(45deg)}#submit{position:absolute;bottom:0;width:80%;background-color:transparent;padding:5px 15px;border-radius:.3em;border-color:#1c4191;background-color:#1c4191;color:#fff;position:relative;overflow:hidden;transition-duration:.5s;transition-property:background-color,color}#submit:disabled{background-color:gray;color:#ccc}</style><div id=options></div><button id=submit>submit</button><script>$(document).ready(function(){let e=[...new URLSearchParams(window.location.search).entries()],a=$("#options");(e=e.filter(e=>"frameId"!=e[0])).forEach(e=>{a.append($(`<label class="container">${e[0]}<input type="checkbox" value="${e[1]}"><span class="checkmark"></span></label>`))}),$("#submit").click(function(e){let t=[];console.log("button clicked"),a.children("label").each(function(e){let a=$(this).children("input").eq(0);1==a.prop("checked")&&t.push(a.val())}),window.parent.postMessage(JSON.stringify({event_code:"ym-client-event",data:JSON.stringify({event:{code:"issues",data:{payload:t}}})}),"*"),$("#submit").attr("disabled","disabled")})});</script>
