--- a/customCheckBox.html
+++ b/customCheckBox.html
@@ -86,6 +86,7 @@
             color: red;
             display: none;
             margin: 5px;
+            font-size: 10px;
             transition-duration: 200ms;
             transition-property: display;
 
