--- a/customCheckBox.html
+++ b/customCheckBox.html
@@ -91,8 +91,7 @@
             display: none;
             margin: 5px;
             font-size: 10px;
-            transition-duration: 200ms;
-            transition-property: display;
+            transition: all 1s ease-out;
 
         }
 
@@ -112,8 +111,7 @@
             color: white;
             position: relative;
             overflow: hidden;
-            transition-duration: 500ms;
-            transition-property: background-color, color;
+            transition: all 1s ease-out;
         }
 
         #submit:disabled {
@@ -130,8 +128,7 @@
             right: 0;
             background-color: rgb(227, 235, 244, 0.8);
             z-index: 1;
-            transition-duration: 500ms;
-            transition-property: display;
+            transition: all 1s ease-out;
         }
     </style>
 </head>
