--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 			<div class="center">
 				<h1>Harish Mukkara</h1>
-				<h4>Full stack Developer, Intern(engieering) at <a
+				<h4>Full stack Developer, Intern(engineering) at <a
 						href="https://yellowmessenger.com/">Yellowmessenger</a></h4>
 			</div>
 			<!-- social card -->
@@ -249,7 +249,7 @@
 
 		</div>
 		<div style="text-align:center;color:#aaa;font-size: .75rem;text-transform: uppercase;">
-			<p>Site Last updated: 14-08-2019</p>
+			<p>Site Last updated: 20-01-2019</p>
 		</div>
 </body>
 
